...
          tabBarIcon: ({ color }: { color: string }) => <TabBarIcon name="home" color={color} />,
        }}
      />
      <Tabs.AvatarRelativeProjection
        name="hooks"
        options={{
          title: 'Truex Hook Cockpit',
          tabBarLabel: 'Hooks',
          tabBarIcon: ({ color }: { color: string }) => <TabBarIcon name="link" color={color} />,
        }}
      />
      <Tabs.AvatarRelativeProjection
        name="openai"
        options={{
...
        }}
      />
      <Tabs.AvatarRelativeProjection
        name="account"
        options={{
          title: 'Account Settings',
          tabBarLabel: 'Account',
          tabBarIcon: ({ color }: { color: string }) => <TabBarIcon name="user" color={color} />,
        }}
      />
      <Tabs.AvatarRelativeProjection
        name="admin"
        options={{
          title: 'Truex Mission Control',
          tabBarLabel: 'Admin',
          tabBarIcon: ({ color }: { color: string }) => <TabBarIcon name="gears" color={color} />,
          tabBarButtonTestID: 'dev-actor-lab-tab',
        }}
...
