appId: com.truex.membraneclient
---
- launchApp:
    clearState: true
- tapOn: "your@email.com"
- inputText: "test@example.com"
- tapOn: "Enter your password"
- inputText: "password123"
- tapOn: "Establish Secure Session"
- tapOn: "Hooks"

- assertVisible: "Truex Hook Cockpit"

# Switch to admin to view run audits
- tapOn: "admin"
- assertVisible: "RECEIPT/AUDIT"

# Switch back to member
- tapOn: "member"
- assertVisible: "HELP INVITATION"
